syntax = "proto3";

package customer.api.v1;

option csharp_namespace = "DKH.CustomerService.Contracts.Api.V1";

import "customer/models/v1/wishlist_item.proto";
import "types/guid.proto";
import "types/pagination.proto";

service WishlistService {
  rpc GetWishlist(GetWishlistRequest) returns (GetWishlistResponse);
  rpc AddToWishlist(AddToWishlistRequest) returns (AddToWishlistResponse);
  rpc RemoveFromWishlist(RemoveFromWishlistRequest) returns (RemoveFromWishlistResponse);
  rpc CheckProductInWishlist(CheckProductInWishlistRequest) returns (CheckProductInWishlistResponse);
  rpc ClearWishlist(ClearWishlistRequest) returns (ClearWishlistResponse);
  rpc GetWishlistCount(GetWishlistCountRequest) returns (GetWishlistCountResponse);
}

message GetWishlistRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;
  string telegram_user_id = 2;
  proto.platform.grpc.common.types.PaginationRequest pagination = 3;
}

message GetWishlistResponse {
  customer.models.v1.Wishlist wishlist = 1;
}

message AddToWishlistRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;
  string telegram_user_id = 2;
  proto.platform.grpc.common.types.GuidValue product_id = 3;
  proto.platform.grpc.common.types.GuidValue product_sku_id = 4;
  string note = 5;
}

message AddToWishlistResponse {
  customer.models.v1.WishlistItem item = 1;
  bool already_exists = 2;
}

message RemoveFromWishlistRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;
  string telegram_user_id = 2;
  proto.platform.grpc.common.types.GuidValue product_id = 3;
  proto.platform.grpc.common.types.GuidValue product_sku_id = 4;
}

message RemoveFromWishlistResponse {
  bool success = 1;
}

message CheckProductInWishlistRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;
  string telegram_user_id = 2;
  proto.platform.grpc.common.types.GuidValue product_id = 3;
  proto.platform.grpc.common.types.GuidValue product_sku_id = 4;
}

message CheckProductInWishlistResponse {
  bool in_wishlist = 1;
  customer.models.v1.WishlistItem item = 2;
}

message ClearWishlistRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;
  string telegram_user_id = 2;
}

message ClearWishlistResponse {
  int32 items_removed = 1;
}

message GetWishlistCountRequest {
  proto.platform.grpc.common.types.GuidValue storefront_id = 1;
  string telegram_user_id = 2;
}

message GetWishlistCountResponse {
  int32 count = 1;
}
